@@ -1,3 +1,10 @@
+Fri May  4 14:43:37 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * orbsvcs/orbsvcs/Trader/Trader.cpp:
+          Fixed setting of maximums through the commandline. Thanks to
+          Patrick Spiering <pspiering at aweta dot nl> for delivering
+          the patch. This fixes bugzilla 2921
+
 Fri May  4 14:06:39 UTC 2007  Ciju John  <johnc at ociweb dot com>
 
         * tao/Transport_Connector.cpp:
